# NxCoreApi003CategoryMessage

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  qb.sh  run.sh
.github/workflows/: ci-build.yml
apps/: CMakeLists.txt
apps/catmsg/: CMakeLists.txt  main.cpp
apps/nxcore-cat-message/: CMakeLists.txt  main.cpp
cmake/: CompilerOptions.cmake
doc/: NxCoreAPI~ReleaseNotes.txt
src/: categoryMessageDump.cpp  executableUtils.cpp  main.cpp  nxcaExceptions.cpp  nxcoreCallback.cpp  nxcore_global.cpp  processNxCoreCategoryMessage.cpp  processNxCoreStatusMessage.cpp  processNxCoreSymbolSpinMessage.cpp
src/srcinc/: executableUtils.hpp  nxcaExceptions.hpp  nxcoreCallback.hpp  processNxCoreCategoryMessage.hpp  processNxCoreStatusMessage.hpp  processNxCoreSymbolSpinMessage.hpp
